Change PostgreSQL datasource configuration
Updated database connection properties for Aiven PostgreSQL.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,11 @@ spring.application.name=ofs
 server.port=2518
 
 
-spring.datasource.url=jdbc:postgresql://dpg-d34ivvfdiees73et3390-a.oregon-postgres.render.com:5432/ofs_be?sslmode=require
-spring.datasource.username=ofs_be_user
-spring.datasource.password=s9z0kCnQLYPjuYSm405GT6fRkpalboem
+#postgres://avnadmin:AVNS_yD0XXUvCby6kigLMD7F@pg-aacd97-satyaklu7981-6ee1.b.aivencloud.com:11835/defaultdb?sslmode=require
+
+spring.datasource.url=jdbc:postgresql://pg-aacd97-satyaklu7981-6ee1.b.aivencloud.com:11835/defaultdb?sslmode=require
+spring.datasource.username=avnadmin
+spring.datasource.password=AVNS_yD0XXUvCby6kigLMD7F
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 
