--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=ofs
-server.port=${2518}
+server.port=2518
 
 
 #postgres://avnadmin:AVNS_yD0XXUvCby6kigLMD7F@pg-aacd97-satyaklu7981-6ee1.b.aivencloud.com:11835/defaultdb?sslmode=require
