Update PostgreSQL datasource properties
Updated PostgreSQL datasource configuration with new URL and credentials.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,11 @@
 spring.application.name=ofs
 server.port=2518
 
+#postgres://avnadmin:AVNS_9FwLXZDQUClq1RwLWNi@pg-3a13240f-satyaklu7981-6ee1.g.aivencloud.com:11835/defaultdb?sslmode=require
 
-#postgres://avnadmin:AVNS_yD0XXUvCby6kigLMD7F@pg-aacd97-satyaklu7981-6ee1.b.aivencloud.com:11835/defaultdb?sslmode=require
-
-spring.datasource.url=jdbc:postgresql://pg-aacd97-satyaklu7981-6ee1.b.aivencloud.com:11835/defaultdb?sslmode=require
+spring.datasource.url=jdbc:postgresql://pg-3a13240f-satyaklu7981-6ee1.g.aivencloud.com:11835/defaultdb?sslmode=require
 spring.datasource.username=avnadmin
-spring.datasource.password=AVNS_yD0XXUvCby6kigLMD7F
+spring.datasource.password=AVNS_9FwLXZDQUClq1RwLWNi
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 
