--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,13 @@
 spring.application.name=ofs
 server.port=2518
 
-#postgres://avnadmin:AVNS_9FwLXZDQUClq1RwLWNi@pg-3a13240f-satyaklu7981-6ee1.g.aivencloud.com:11835/defaultdb?sslmode=require
 
-spring.datasource.url=jdbc:postgresql://pg-3a13240f-satyaklu7981-6ee1.g.aivencloud.com:11835/defaultdb?sslmode=require
-spring.datasource.username=avnadmin
-spring.datasource.password=AVNS_9FwLXZDQUClq1RwLWNi
-spring.datasource.driver-class-name=org.postgresql.Driver
-
-
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+# application.properties
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/ofsbe?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=admin
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+logging.level.org.springframework=INFO
+logging.level.com.example.house=DEBUG
